# ion-bot

./: .gitattributes  .gitignore  Cargo.toml  babel.config.json  build.rs  eslint.config.js  flake.nix  package-lock.json  package.json  rolldown.config.js  rollup.config.js  screeps.json  screeps.key  tsconfig.json
.git-crypt/keys/default/0/: 8B96CBFEB241D3570A84DD597915A27D05D393CA.gpg
src/: error.ts  game_actions.rs  index.ts  lib.rs  logging.rs  main.ts  mapError.ts  pollyfill.ts  typeCompiler.ts  worldStat.ts  world_stat.rs
src/proto/: index.proto
