[package]
name = "ion-bot"
version = "0.1.0"
edition = "2024"
description = "My bot for game screeps"
license = "MIT"
authors = ["chlorodose"]
publish = false

[dependencies]
humansize = "2.1.3"
log = { version = "0.4.27", features = ["kv", "std"] }
prost = "0.13.5"
wasm-bindgen = "0.2.100"

[build-dependencies]
prost-build = "0.13.5"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true
strip = false

[package.metadata]
screeps_bot = true
